bugs fixed(z-indexes)

--- a/sass/main.css
+++ b/sass/main.css
@@ -67,14 +67,6 @@ body {
   height: 100%;
   position: relative;
 }
-.ludo__players {
-  width: 100%;
-  height: 100%;
-}
-.ludo__players--home {
-  width: 100%;
-  height: 100%;
-}
 .ludo__players--home * {
   width: 40%;
   height: 40%;
@@ -90,14 +82,17 @@ body {
   justify-items: center;
   background: #00ff01;
 }
-.ludo__players--home-1 > * {
+.ludo__players--home-1 > [data-place] {
   position: relative;
-  border: 1px solid black;
   width: 120px;
   height: 120px;
   background: #fff;
   border-radius: 3px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  transition: 400ms;
+}
+.ludo__players--home-1 > [data-place]:hover {
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
 .ludo__players--home-2 {
   right: 0;
@@ -109,12 +104,11 @@ body {
 }
 .ludo__players--home-2 > * {
   position: relative;
-  border: 1px solid black;
   width: 120px;
   height: 120px;
   background: #fff;
   border-radius: 3px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 .ludo__players--home-3 {
   bottom: 0;
@@ -126,12 +120,11 @@ body {
 }
 .ludo__players--home-3 > * {
   position: relative;
-  border: 1px solid black;
   width: 120px;
   height: 120px;
   background: #fff;
   border-radius: 3px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 .ludo__players--home-4 {
   bottom: 0;
@@ -144,21 +137,15 @@ body {
 }
 .ludo__players--home-4 > * {
   position: relative;
-  border: 1px solid black;
   width: 120px;
   height: 120px;
   background: #fff;
   border-radius: 3px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-}
-.ludo__tracks {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 .ludo__tracks > * {
   position: absolute;
+  z-index: 1;
 }
 .ludo__tracks-1 {
   top: 0;
